--- a/frontend/src/components/LandingPage/LandingPage.css
+++ b/frontend/src/components/LandingPage/LandingPage.css
@@ -7,6 +7,7 @@
 }
 
 .pizza_card {
+  --padding: 0 20px;
   text-decoration: none;
   cursor: pointer;
   border: 0px solid black;
@@ -21,41 +22,47 @@
   }
 
   & h2 {
-    padding: 0 10px;
+    margin: 0;
+    padding: 20px;
+    background-color: var(--primary-v1);
+    color: var(--sub-secondary-v1);
+    border: 0px solid black;
     font-family: var(--header-font);
-    font-size: clamp(1rem, 1.5rem);
+    font-size: 1.8rem;
   }
   & p {
-    padding: 0 10px;
+    padding: var(--padding);
     font-family: var(--description-font);
     font-size: clamp(1rem, 1.5rem);
     text-align: justify;
   }
 
-  & ul{
-    padding: 0 10px;
+  & ul {
+    padding: var(--padding);
     list-style: none;
     display: flex;
     justify-content: flex-start;
     gap: 10px;
   }
 
-  & .pizza_card_footer{
+  & .pizza_card_footer {
     background-color: var(--third-v1);
     height: 2.5rem;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
     color: var(--sub-secondary-v1);
+    font-size: 1.1rem;
 
-    & div{
+    & div {
       display: flex;
       gap: 10px;
     }
   }
 
-  & button{
+  & button {
     width: 100%;
     height: 2.5rem;
+    font-size: 1rem;
   }
 }
