--- a/frontend/src/components/LandingPage/LandingPage.css
+++ b/frontend/src/components/LandingPage/LandingPage.css
@@ -2,7 +2,7 @@
   border: 0px solid black;
   display: grid;
   width: 100%;
-  grid-template-columns: repeat(auto-fill, clamp(200px, 400px, 40%));
+  grid-template-columns: repeat(auto-fill, clamp(300px, 400px, 20%));
   grid-gap: 5px;
 }
 
@@ -14,10 +14,15 @@
   background-color: var(--sub-secondary-v1);
   width: fit-content;
   box-shadow: 2px 10px 10px 5px rgba(0, 0, 0, 0.2);
-
+  
+  & .img_container{
+    overflow: hidden;
+  }
+  
   & img {
     width: 100%;
     object-fit: cover;
+    transition: all 0.6s ease-in-out;
   }
 
   & h2 {
@@ -27,12 +32,13 @@
     color: var(--sub-secondary-v1);
     border: 0px solid black;
     font-family: var(--header-font);
-    font-size: 1.8rem;
+    font-size: 1.3rem;
   }
+
   & p {
     padding: var(--padding);
     font-family: var(--description-font);
-    font-size: clamp(1rem, 1.5rem);
+    font-size: clamp(1rem, 1.3rem);
     text-align: justify;
   }
 
@@ -63,6 +69,12 @@
     width: 100%;
     height: 2.5rem;
     font-size: 1rem;
+  }
+}
+
+.pizza_card:hover {
+  & img {
+    transform: scale(1.5);
   }
 }
 
