--- a/frontend/src/components/LandingPage/LandingPage.css
+++ b/frontend/src/components/LandingPage/LandingPage.css
@@ -1,12 +1,48 @@
-#pizzas_container {
+#pizzas_container,
+#ingredients_container {
   border: 0px solid black;
   display: grid;
   width: 100%;
   grid-template-columns: repeat(auto-fill, clamp(300px, 400px, 20%));
   grid-gap: 5px;
+  overflow: hidden;
+  position: relative;
 }
 
-.pizza_card {
+#pizzas_container {
+  & .banner{
+    position: absolute;
+    background-color: var(--sub-secondary-v1);
+    font-family: var(--description-font);
+    font-size: 1.5rem;
+    padding: 0.5rem;
+    transform: rotate(-45deg);
+    top: 0.5rem;
+    left: -0.9rem;
+  }
+}
+
+#ingredients_container {
+  grid-template-columns: repeat(auto-fill, clamp(200px, 300px, 15%));
+
+  & .banner{
+    position: absolute;
+    background-color: var(--sub-secondary-v1);
+    font-family: var(--description-font);
+    font-size: 1.3rem;
+    padding: 0.5rem;
+    transform: rotate(-45deg);
+    top: 0.8rem;
+    left: -1.2rem;
+  }
+}
+
+#ingredients_container {
+  margin-top: 5px;
+}
+
+.pizza_card,
+.ingredient_card {
   --padding: 0 20px;
   text-decoration: none;
   cursor: pointer;
@@ -14,11 +50,11 @@
   background-color: var(--sub-secondary-v1);
   width: fit-content;
   box-shadow: 2px 10px 10px 5px rgba(0, 0, 0, 0.2);
-  
-  & .img_container{
+
+  & .img_container {
     overflow: hidden;
   }
-  
+
   & img {
     width: 100%;
     object-fit: cover;
@@ -77,17 +113,32 @@
     transform: scale(1.5);
   }
 }
+.ingredient_card{
+  cursor: inherit;
+  width: fit-content;
+  
+  & .img_container{
+    height: clamp(9rem, 9rem, 9rem);
+  }
 
+  & img{
+    width: 100%;
+    object-fit: cover;
+  }
+}
 .basket {
+  z-index: 10;
   cursor: pointer;
   font-size: 4rem;
   position: absolute;
   top: 0;
   left: 50%;
   transform: translateY(-120%);
-  transition: transform 0.4s cubic-bezier(0.60, 0.10, 1.00, 2.00);
+  transition: transform 0.4s cubic-bezier(0.6, 0.1, 1, 2);
 }
 
 .basket-show {
   transform: translateY(0);
 }
+
+
