--- a/frontend/src/components/LandingPage/LandingPage.css
+++ b/frontend/src/components/LandingPage/LandingPage.css
@@ -127,7 +127,7 @@
   }
 }
 .basket {
-  z-index: 10;
+  z-index: 1;
   cursor: pointer;
   font-size: 4rem;
   position: absolute;
@@ -135,6 +135,26 @@
   left: 50%;
   transform: translateY(-120%);
   transition: transform 0.4s cubic-bezier(0.6, 0.1, 1, 2);
+
+  & span {
+    position: relative;
+    font-size: 2rem;
+    font-style: italic;
+    color: var(--sub-secondary-v1)
+  }
+  
+  & span::after{
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: var(--secondary-v1);
+    transform: rotate(25deg);
+    top: 0;
+    left: 0;
+    z-index: -1;
+    border-radius: 50%;
+  }
 }
 
 .basket-show {
