added additional pizzas and styling improvements

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -15,6 +15,14 @@
   --sub-primary-v1: #6c3b2a;
   --sub-secondary-v1: #fdf7f2;
   --third-v1: #333333;
+
+  background-color: var(--sub-secondary-v1);
+}
+body {
+  margin: 0.2rem;
+  padding: 0;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 button{
   cursor: pointer;
