--- a/frontend/src/components/LandingPage/LandingPage.css
+++ b/frontend/src/components/LandingPage/LandingPage.css
@@ -57,6 +57,7 @@
 
   & img {
     width: 100%;
+    height: clamp(11rem, 9rem, 10rem);
     object-fit: cover;
     transition: all 0.6s ease-in-out;
   }
@@ -135,6 +136,9 @@
   left: 50%;
   transform: translateY(-120%);
   transition: transform 0.4s cubic-bezier(0.6, 0.1, 1, 2);
+  background-color: var(--sub-secondary-v1);
+  opacity: 0.7;
+  border-radius:10%;
 
   & span {
     position: relative;
