--- a/frontend/src/components/LandingPage/LandingPage.css
+++ b/frontend/src/components/LandingPage/LandingPage.css
@@ -49,6 +49,7 @@
   border: 0px solid black;
   background-color: var(--sub-secondary-v1);
   width: fit-content;
+  height: min-content;
   box-shadow: 2px 10px 10px 5px rgba(0, 0, 0, 0.2);
 
   & .img_container {
@@ -77,6 +78,11 @@
     font-family: var(--description-font);
     font-size: clamp(1rem, 1.3rem);
     text-align: justify;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 5;
+    line-clamp: 5;
+    overflow: hidden;
   }
 
   & ul {
