--- a/frontend/src/components/LandingPage/LandingPage.css
+++ b/frontend/src/components/LandingPage/LandingPage.css
@@ -10,7 +10,7 @@
 }
 
 #pizzas_container {
-  & .banner{
+  & .banner {
     position: absolute;
     background-color: var(--sub-secondary-v1);
     font-family: var(--description-font);
@@ -25,7 +25,7 @@
 #ingredients_container {
   grid-template-columns: repeat(auto-fill, clamp(200px, 300px, 15%));
 
-  & .banner{
+  & .banner {
     position: absolute;
     background-color: var(--sub-secondary-v1);
     font-family: var(--description-font);
@@ -49,6 +49,7 @@
   border: 0px solid black;
   background-color: var(--sub-secondary-v1);
   width: fit-content;
+  height: min-content;
   box-shadow: 2px 10px 10px 5px rgba(0, 0, 0, 0.2);
 
   & .img_container {
@@ -57,6 +58,7 @@
 
   & img {
     width: 100%;
+    height: clamp(11rem, 9rem, 10rem);
     object-fit: cover;
     transition: all 0.6s ease-in-out;
   }
@@ -76,6 +78,11 @@
     font-family: var(--description-font);
     font-size: clamp(1rem, 1.3rem);
     text-align: justify;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 5;
+    line-clamp: 5;
+    overflow: hidden;
   }
 
   & ul {
@@ -113,21 +120,21 @@
     transform: scale(1.5);
   }
 }
-.ingredient_card{
+.ingredient_card {
   cursor: inherit;
   width: fit-content;
-  
-  & .img_container{
+
+  & .img_container {
     height: clamp(9rem, 9rem, 9rem);
   }
 
-  & img{
+  & img {
     width: 100%;
     object-fit: cover;
   }
 }
 .basket {
-  z-index: 10;
+  z-index: 1;
   cursor: pointer;
   font-size: 4rem;
   position: absolute;
@@ -135,10 +142,31 @@
   left: 50%;
   transform: translateY(-120%);
   transition: transform 0.4s cubic-bezier(0.6, 0.1, 1, 2);
+  background-color: var(--sub-secondary-v1);
+  opacity: 0.7;
+  border-radius:10%;
+
+  & span {
+    position: relative;
+    font-size: 2rem;
+    font-style: italic;
+    color: var(--sub-secondary-v1);
+  }
+
+  & span::after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: var(--secondary-v1);
+    transform: rotate(25deg);
+    top: 0;
+    left: 0;
+    z-index: -1;
+    border-radius: 50%;
+  }
 }
 
 .basket-show {
   transform: translateY(0);
 }
-
-
