--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -1,42 +1,45 @@
 nav {
-    width: 100%;
-    & ul {
-      list-style: none;
-  
-      display: flex;
-      align-items: center;
-  
-      & li {
-        flex-grow: 1;
+  width: 100%;
+  & ul {
+    list-style: none;
+
+    display: flex;
+    align-items: center;
+
+    & li {
+      flex-grow: 1;
+
+      & a:has(svg) {
+        color: inherit;
       }
     }
   }
-  
-  .basket {
-    z-index: 1;
-    cursor: pointer;
-    font-size: 3.5rem;
+}
+
+.basket {
+  z-index: 1;
+  cursor: pointer;
+  font-size: 3.5rem;
+  position: relative;
+  background-color: var(--sub-secondary-v1);
+  border-radius: 10%;
+
+  & span {
     position: relative;
-    background-color: var(--sub-secondary-v1);
-    border-radius: 10%;
-  
-    & span {
-      position: relative;
-      font-style: italic;
-      color: var(--sub-secondary-v1);
-    }
-  
-    & span::after {
-      content: "";
-      position: absolute;
-      width: 100%;
-      height: 100%;
-      background-color: var(--secondary-v1);
-      transform: rotate(25deg);
-      top: 0;
-      left: 0;
-      z-index: -1;
-      border-radius: 50%;
-    }
+    font-style: italic;
+    color: var(--sub-secondary-v1);
   }
-  
+
+  & span::after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: var(--secondary-v1);
+    transform: rotate(25deg);
+    top: 0;
+    left: 0;
+    z-index: -1;
+    border-radius: 50%;
+  }
+}
