--- a/frontend/src/components/VoiceHelper/VoiceHelper.css
+++ b/frontend/src/components/VoiceHelper/VoiceHelper.css
@@ -5,7 +5,7 @@
   padding: 1rem;
   background-color: var(--secondary-v1);
   overflow-y: scroll;
-
+  
   & svg {
     cursor: pointer;
     font-size: 1.5rem;
@@ -13,9 +13,6 @@
     margin: 0.5rem;
     border: 1px solid black;
     border-radius: 50%;
-    position: fixed;
-    bottom: 0rem;
-    right: 4rem;
     background-color: inherit;
   }
 
@@ -34,7 +31,7 @@
 
   & div.client {
     border: 1px solid #d0c8c8;
-    background-color: #f7f5f5;
+    background-color: white;
   }
 
   & div.agent::before {
